# homie_bot

./: .env.example  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
bots/Homie/: examples.md  important.md  info.md
homie_bot/: db.py  logging.py  models.py  utils.py
homie_bot/chatting/: formatting.py  llm.py  packing.py  retrieval.py  schema.py
homie_bot/commands/: __init__.py  backstory.py  chat.py  lore.py  purge.py  regenerate.py  reset.py  roll.py
